--- a/attendance.html
+++ b/attendance.html
@@ -29,7 +29,7 @@
 			<div> 
 				<div>
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="#">Homea</a></li>
 						<li><a href="#">History</a></li>
 					</ul>
 				</div>
