--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@
             </div>
             <div class="d-flex justify-content-center flex-wrap" style="height: 100px" id="bottom">
               <div class="d-flex flex-column" style="padding-bottom: 50px">
-                <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" href="#" role="button">HISTORY</a></div>
-                <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" href="#" role="button">ABSENCE</a></div>
+                <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" href="attendance.html" role="button">ABSENCE</a></div>
+                <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" href="history.html" role="button">HISTORY</a></div>
               </div>
             </div>
           </div>
