--- a/camera.html
+++ b/camera.html
@@ -21,7 +21,7 @@
             <div class="mainTop">
               <video autoplay id="video" class="frame"></video>
               <canvas class="frame" id="canvas"></canvas>
-              <div id="btnScreenshot" style="padding: 10px; ;"><button type="button" class="btn btn-primary btn-lg" style="width: 270px"> Capture</button></div>
+              <div id="btnScreenshot" style="padding: 10px;"><button type="button" class="btn btn-primary btn-lg" style="width: 270px"> Capture</button></div>
                 <div class="d-flex justify-content-center flex-wrap" >
                   <div class="d-flex" style="margin-bottom: 50px">
                     <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" style="background-color:#2A8335" href="#" role="button">Check-In</a></div>
@@ -37,6 +37,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-    <script src="camscript.js"></script>
+    <script src="js/camscript.js"></script>
   </body>
 </html>
