location is noice

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
           <div class="row content">
             <div>
               <div style="float:right">
-                <button type="button" class="btn btn-link btn-lg">""<span class='bi bi-door-open' style="font-size: 30px;"></span></button> 
+                <button type="button" class="btn btn-link btn-lg"><span class='bi bi-door-open' style="font-size: 30px;"></span></button> 
               </div>
             <div class="mainTop" id="top">
               <div style="margin-top: 250px">
