--- a/attendance.html
+++ b/attendance.html
@@ -38,7 +38,7 @@
 				<div class="d-flex justify-content-center flex-wrap" style="height: 100px" id="bottom">
                     <div class="d-flex flex-column" style="padding-bottom: 50px">
                         <div class="p-2" style="padding: 10px;">
-                            <a class="submenu" href="home.html">Home</a>
+                            <a class="submenu" href="home.php">Home</a>
                         </div>
                         <div class="p-2" style="padding: 10px;">
                             <a class="submenu" href="history.html">History</a>
