--- a/attendance.html
+++ b/attendance.html
@@ -20,7 +20,7 @@
 
 <body>
 	<div class="d-flex justify-content-center">
-        <div><h2>Absence</h2></div>
+        <div><h2>Attendance</h2></div>
     </div>
 	<div class="menu-wrap">
 		<input type="checkbox" class="toggler">
@@ -50,7 +50,9 @@
 	</div>
     <div class="container">
     	<div class="content">
-            <button type="button" class="btn"><span class="bi bi-camera" ></span> Take a Picture</button>
+			<form action="camera.html">
+				<button type="submit" class="btn"><span class="bi bi-camera" ></span> Take a Picture</button>
+			</form>
     		<!-- <h2>Welcome</h2> -->
             <div class="row">
                 <div class="column">
