--- a/camera.html
+++ b/camera.html
@@ -24,8 +24,8 @@
               <div id="btnScreenshot" style="padding: 10px;"><button type="button" class="btn btn-primary btn-lg" style="width: 270px"> Capture</button></div>
                 <div class="d-flex justify-content-center flex-wrap" >
                   <div class="d-flex" style="margin-bottom: 50px">
-                    <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" style="background-color:#2A8335" href="#" role="button">Check-In</a></div>
-                    <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" style="background-color:#C62020" href="#" role="button">Check-Out</a></div>
+                    <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" style="background-color:#2A8335" href="location.html" role="button">Check-In</a></div>
+                    <div class="p-2" style="padding: 10px;"><a class="btn btn-primary" style="background-color:#C62020" href="attendance" role="button">Check-Out</a></div>
                   </div>
                 </div>
               </div>
