--- a/location.html
+++ b/location.html
@@ -39,7 +39,7 @@
       </div> -->
       <div class="d-flex justify-content-center">
           <div class="mainBottom">
-              <div class="d-flex align-items-center flex-column">
+              <div id="getLocationContent" class="d-flex align-items-center flex-column">
                 <div class="p-2" style="margin: 0 35px 0 35px; text-align: center">
                     <p style="overflow: auto;"> *Pilih lokasi kantor/biro tempat anda bekerja </p>
                 </div>    
@@ -51,13 +51,15 @@
                 
                           <h2 class="p-2">Position:</h2>
                           <p class="p-2">Your distance to the office is:</p>
-                          <p class="p-2" id="demo"></p>
+                          <p class="p-2" id="location"></p>
                           
                           <p class="p-2">Work status: WFO</p>
                       </div>
                   </div>
                   <div class="p-2">
-                      <button type="button" class="btn btn-primary" style="width: 270px" id="confirmBtn"> Confirm</button>
+                      <form action="attendance.html">
+                          <button type="submit" class="btn btn-primary" style="width: 270px" id="confirmBtn"> Confirm</button>
+                      </form>
                       <!-- <button type="button" class="btn btn-block" style="width: 270px"> Confirm</button> -->
                   </div>
               </div>
@@ -85,7 +87,7 @@
             });
         });
 
-        var x = document.getElementById("demo");
+        var x = document.getElementById("location");
         function getLocation() {
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(showPosition);
