--- a/history.html
+++ b/history.html
@@ -36,10 +36,10 @@
                 <div class="d-flex justify-content-center flex-wrap" style="height: 100px" id="bottom">
                     <div class="d-flex flex-column" style="padding-bottom: 50px">
                         <div class="p-2" style="padding: 10px;">
-                            <a class="submenu" href="home.php">Home</a>
+                            <a class="submenu" href="home.php" id="pageButton">Home</a>
                         </div>
                         <div class="p-2" style="padding: 10px;">
-                            <a class="submenu" href="attendance.html">Attendance</a>
+                            <a class="submenu" href="attendance.html" id="pageButton">Attendance</a>
                         </div>
                     </div>
                 </div>
