--- a/location.html
+++ b/location.html
@@ -22,17 +22,25 @@
          <div class="dropdown">Menu<span class="bi bi-chevron-down"></span></div>
         <!-- <div class="dropdown">Menu<span class="fas fa-bars"></span></div> -->
         <ul>
-            <li><a href="#" onClick="checkOffice()" id="officeName">Kedoya</a></li>
-            <li><a href="#" onClick="checkOffice()">Bandung</a></li>
-            <li><a href="#" onClick="checkOffice()">Joglo</a></li>
-            <li><a href="#" onClick="checkOffice()">Aceh</a></li>
-            <li><a href="#" onClick="checkOffice()">Biro Semarang</a></li> 
-            <li><a href="#" onClick="checkOffice()">Makasar</a></li>
-            <li><a href="#" onClick="checkOffice()">Transmisi Semarang</a></li>
-            <li><a href="#" onClick="checkOffice()">Transmisi Surabaya</a></li>
-            <li><a href="#" onClick="checkOffice()">Transmisi Denpasar</a></li>
-            <li><a href="#" onClick="checkOffice()">Transmisi Yogyakarta</a></li>
+            <li><a href="#" onClick="checkOffice() ">Kedoya</a></li>
+            <li><a href="#" onClick="checkOffice() ">Bandung</a></li>
+            <li><a href="#" onClick="checkOffice() ">Joglo</a></li>
+            <li><a href="#" onClick="checkOffice() ">Aceh</a></li>
+            <li><a href="#" onClick="checkOffice() ">Biro Semarang</a></li> 
+            <li><a href="#" onClick="checkOffice() ">Makasar</a></li>
+            <li><a href="#" onClick="checkOffice() ">Transmisi Semarang</a></li>
+            <li><a href="#" onClick="checkOffice() ">Transmisi Surabaya</a></li>
+            <li><a href="#" onClick="checkOffice() ">Transmisi Denpasar</a></li>
+            <li><a href="#" onClick="checkOffice() ">Transmisi Yogyakarta</a></li>
           </ul>
+
+          <select id="office" onChange="update()">
+			<option value="kdy">Kedoya</option>
+			<option value="bdg">Bandung</option>
+			<option value="jgl">Joglo</option>
+		</select>
+		<input type="text" id="value">
+		<input type="text" id="officeName">
       </div>
       <!-- <div style="height: 300px; ">
           <br>
@@ -67,8 +75,10 @@
               </div>
           </div>
       </div>
-      <script src="js/locationscript.js"></script>
-
+      <script src="js/locationscript.js" type="text/javascript"></script>
+      <!-- <script type="text/javascript"> -->
+ 
+    </script>
 
   </body>
 </html>
