--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="test.css">
     <title>JavaScript Radio Button</title>
 </head>
 <body>
@@ -66,7 +67,7 @@
 
     <script>
         const btn = document.querySelector('#btn');        
-        const radioButtons = document.querySelectorAll('input[name="size"]');
+        const radioButtons = document.querySelectorAll('input[name="option"]');
         btn.addEventListener("click", () => {
             let selectedSize;
             for (const radioButton of radioButtons) {
