--- a/location.html
+++ b/location.html
@@ -122,7 +122,7 @@
                         <div class="p-2"> 
                             <div class="d-flex align-items-center flex-column">
                                 <!-- <button type="button" class="btn btn-primary" id="getDistance" onclick="getLocation()"> Get your current location </button> -->
-                                <button type="button" class="btn btn-primary" id="btn"> Get your current location </button>
+                                <button type="button" method="get" class="btn btn-primary" id="btn"> Get your current location </button>
                             </div>
                             <div id="showPosition" class="d-flex align-items-center flex-column">
                       
