cam works now yey

--- a/attendance.html
+++ b/attendance.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
 			<div style="margin-top:10%;"></br></div>
-			<form action="camera.html">
+			<form action="camera.php">
 				<button type="submit" class="btn btn-primary"><span class="bi bi-camera" ></span> Take a Picture</button>
 			</form>
     	</div>
